[gd_scene load_steps=4 format=3 uid="uid://curpyo4dc6khh"]

[ext_resource type="Script" uid="uid://jemsic6hiu12" path="res://scenes/card.gd" id="1_6u4wf"]
[ext_resource type="Texture2D" uid="uid://bs0h1d08jo7go" path="res://assets/images/cards/spades_02.png" id="2_6u4wf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6u4wf"]
size = Vector2(114, 154)

[node name="Card" type="Node2D"]
script = ExtResource("1_6u4wf")

[node name="CardImage" type="Sprite2D" parent="."]
scale = Vector2(0.32, 0.3)
texture = ExtResource("2_6u4wf")

[node name="CardArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CardArea"]
shape = SubResource("RectangleShape2D_6u4wf")

[connection signal="mouse_entered" from="CardArea" to="." method="_on_card_area_mouse_entered"]
[connection signal="mouse_exited" from="CardArea" to="." method="_on_card_area_mouse_exited"]
